--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deleteme",
+  "name": "reproduction-solid-router-routes",
   "private": true,
   "version": "0.0.0",
   "type": "module",
